swagger模块基本集成、测试完成

--- a/spring-boot-swagger/pom.xml
+++ b/spring-boot-swagger/pom.xml
@@ -17,6 +17,18 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>2.9.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.swagger</groupId>
+                    <artifactId>swagger-models</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!--该版本主要是为了修复上面默认2.9.2中依赖的swagger-models模块 1.5.20版本的一处NumberFormatException-->
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>1.5.21</version>
         </dependency>
 
         <dependency>
