Mybatis-plus 基础集成完毕

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,12 @@
              -->
             <scope>test</scope>
         </dependency>
-
+        <!-- hutool工具库 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
