--- a/spring-boot-mybatis-plus/pom.xml
+++ b/spring-boot-mybatis-plus/pom.xml
@@ -44,6 +44,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.git</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
