--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </modules>
 
     <properties>
-        <spring.boot.version>2.2.5.RELEASE</spring.boot.version>
+        <spring.boot.version>2.3.0.RELEASE</spring.boot.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <hutool.version>5.0.0</hutool.version>
         <!--解决 Warning:java: 源值1.5已过时, 将在未来所有发行版中删除  告警问题-->
@@ -68,10 +68,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <!-- 几种scope 介绍
                 compile 默认， 编译运行
-                provided 编译有效，不会打入运行包
+                provided 编译有效，不会打入运行包 如:servlet-api,在tomcat服务器中已经存在了,就不需要打入运行包中
                 runtime：编译不需要，在运行期有效，需要导入包中。（接口与实现分离,比如数据库驱动包）
-　              test：测试需要，不会打入包中
-                system:非本地参考引入，存在于系统路径下的jar包
+　              test：测试需要。在一般的编译和运行时都不需要，它们只有在测试编译和测试运行阶段可用。
+                system:非本地参考引入，存在于系统路径下的jar包。不太常用而且也不推荐
              -->
             <scope>test</scope>
         </dependency>
