--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>spring-boot-log</module>
         <module>spring-boot-swagger</module>
         <module>spring-boot-mybatis-plus</module>
+        <module>spring-boot-multi-datasource</module>
     </modules>
 
     <properties>
