--- a/spring-boot-multi-datasource/pom.xml
+++ b/spring-boot-multi-datasource/pom.xml
@@ -12,7 +12,15 @@
 
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!--多数据源配置：mysql驱动-->
         <dependency>
             <groupId>mysql</groupId>
@@ -24,6 +32,11 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.32.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.git</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
