拖延了好久，终于把对象枚举字段属性的传值和显示测验完毕

--- a/spring-boot-log/pom.xml
+++ b/spring-boot-log/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>spring-boot-log</artifactId>
     <description>测试日志实现和各种日志框架的切换</description>
+    <name>日志模块</name>
 
 
 </project>
