--- a/spring-boot-multi-datasource/pom.xml
+++ b/spring-boot-multi-datasource/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>spring-boot-multi-datasource</artifactId>
-
+    <name>多数据源模块</name>
 
     <dependencies>
         <dependency>
