--- a/spring-boot-swagger/pom.xml
+++ b/spring-boot-swagger/pom.xml
@@ -8,9 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>spring-boot-swagger</artifactId>
-
+    <name>swagger模块</name>
     <dependencies>
         <!-- swagger -->
         <dependency>
