除sqlite库日期字段转换问题外，基本完成多数据源的集成工作(仅查询)

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <description>所有模块引用的公共组件</description>
     <modelVersion>4.0.0</modelVersion>
+    <name>公共模块</name>
 
     <artifactId>common</artifactId>
 
