--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>common</module>
-        <module>spring-boot-log</module>
         <module>spring-boot-swagger</module>
         <module>spring-boot-mybatis-plus</module>
         <module>spring-boot-multi-datasource</module>
+        <module>spring-boot-logging</module>
     </modules>
 
     <properties>
