--- a/spring-boot-logging/pom.xml
+++ b/spring-boot-logging/pom.xml
@@ -8,9 +8,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-boot-log</artifactId>
-    <description>测试日志实现和各种日志框架的切换</description>
-    <name>日志模块</name>
+    <artifactId>spring-boot-logging</artifactId>
+    <name>日志配置模块</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
