--- a/spring-boot-mybatis-plus/pom.xml
+++ b/spring-boot-mybatis-plus/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>spring-boot-mybatis-plus</artifactId>
+    <name>mybatis-plus 代码生成和枚举映射</name>
     <dependencies>
 
         <dependency>
