--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-boot-multi-datasource</module>
         <module>spring-boot-logging</module>
         <module>spring-boot-profile</module>
+        <module>spring-boot-validation</module>
     </modules>
 
     <properties>
