添加mapper.xml 打包问题配置

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,16 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <!-- mapper.xml 文件默认打包动作不会打包到类路劲下，添加include配置-->
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
