--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-boot-logging</module>
         <module>spring-boot-profile</module>
         <module>spring-boot-validation</module>
+        <module>spring-boot-docker</module>
     </modules>
 
     <properties>
