--- a/spring-boot-multi-datasource/pom.xml
+++ b/spring-boot-multi-datasource/pom.xml
@@ -36,4 +36,16 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <!-- mapper.xml 文件默认打包动作不会打包到类路劲下，添加include配置-->
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
