--- a/spring-boot-docker/pom.xml
+++ b/spring-boot-docker/pom.xml
@@ -8,20 +8,20 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>spring-boot-docker</artifactId>
     <name>Docker打包部署模块</name>
-
-    <properties>
-        <docker.image.prefix>buyi</docker.image.prefix>
-    </properties>
     <build>
         <finalName>docker</finalName>
         <plugins>
-            <!--一些较老的教程中使用 docker-maven-plugin 插件，但Spotify官方也不再推荐使用，代之以 dockerfile-maven-plugin -->
+            <!--一些较老的教程中使用 docker-maven-plugin 插件，但Spotify官方已经不再推荐使用，代之以 dockerfile-maven-plugin -->
             <!--
                 dockerfile-maven-plugin 插件是基于 Dockerfile 文件进行构建 Docker 项目
-                该插件将 Docker 镜像的构建过程集成到了 Maven 的构建过程之中，如果使用默认的配置，使用 mvn package 命令就能打包成一个 Docker 镜像，使用 mvn deploy 命令就能推送到 Docker 仓库。
+                该插件将 Docker 镜像的构建过程集成到了 Maven 的构建过程之中，如果使用默认的配置，使用 mvn package 命令就能打包成一个 Docker 镜像，使用 mvn deploy 命令就能推送到 Docker 仓库(需配置仓库地址)。
+
+                重复打包镜像会出现REPOSITORY 和 TAG都为 none的情况，可通过 docker rmi $(docker images -f "dangling=true" -q) 命令删除
+                也暂未找到好的解决方式，网上基本的处理方式都是通过命令手动更改，例如：docker tag 镜像id REPOSITORY:TAG（仓库：标签）
+
+                镜像构建完成如果需要将镜像推送到仓库，需要配置仓库的地址和认证信息，参考：https://zhuanlan.zhihu.com/p/90122357
             -->
             <plugin>
                 <groupId>com.spotify</groupId>
@@ -31,38 +31,30 @@
                     <execution>
                         <id>default</id>
                         <goals>
+                            <!--
+                                另外，可以在execution中同时指定build和push目标。当运行mvn package时，会自动执行build目标(可直接执行 mvn dockerfile:build 构建镜像)，构建Docker镜像。
+                                当运行mvn deploy命令时，会自动执行push目标，将Docker镜像push到Docker仓库。
+                            -->
                             <goal>build</goal>
-                            <!--<goal>push</goal>-->
+                            <goal>push</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <dockerfile>D:\WorkSpace\spring-boot-series\spring-boot-docker\Dockerfile</dockerfile>
+                    <!--repository 节点指定镜像仓库名字-->
+                    <!--<repository>docker-server</repository>-->
+                    <!--尝试移动Dockerfile文件，路径会自己跟着改变-->
+                    <dockerfile>Dockerfile</dockerfile>
                     <!--镜像版本信息-->
                     <tag>${project.version}</tag>
+                    <!--
+                        buildArgs可以指定一个或多个变量，传递给Dockerfile，在Dockerfile中通过ARG指令进行引用。
+                        这些参数在执行 docker build 的时候会消费
+                    -->
                     <buildArgs>
-                        <!--buildArgs是在docker构建镜像过程中的参数，在Dockerfile中可以使用此参数，此参数在执行 docker build 的时候会消费-->
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <!-- 指定 main 方法类为全局的唯一入口 -->
-                    <mainClass>cnblogs.chenbenbuyi.DockerApplication</mainClass>
-                    <layout>ZIP</layout>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <!--把依赖的包都打包到生成的Jar包中-->
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
