--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-boot-profile</module>
         <module>spring-boot-validation</module>
         <module>spring-boot-docker</module>
+        <module>spring-boot-redis</module>
     </modules>
 
     <properties>
