--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>spring-boot-validation</module>
         <module>spring-boot-docker</module>
         <module>spring-boot-redis</module>
+        <module>spring-boot-excel</module>
     </modules>
 
     <properties>
