添加web模块，并完成页面国际化相关的测试和配置

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-boot-docker</module>
         <module>spring-boot-redis</module>
         <module>spring-boot-excel</module>
+        <module>spring-boot-web</module>
     </modules>
 
     <properties>
