基本完成dubbo生产者和消费者模块的新建和集成测试，踩了不少坑

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>spring-boot-redis</module>
         <module>spring-boot-excel</module>
         <module>spring-boot-web</module>
+        <module>spring-boot-dubbo(provider)</module>
+        <module>spring-boot-dubbo(consumer)</module>
     </modules>
 
     <properties>
