--- a/spring-boot-web/src/main/resources/application.yml
+++ b/spring-boot-web/src/main/resources/application.yml
@@ -6,3 +6,46 @@ spring:
     # 国际化语言文件的基础名——就是去掉语言和国家代码的文件名（需配置目录，默认就是在classpath下） 。在 MessageSourceAutoConfiguration 默认的基础名是 messages
   messages:
     basename: i18n/test
+
+  datasource:
+      username: root
+      password: 123456
+      url: jdbc:mysql://localhost:3306/hello-boot?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+      # 添加了自己引入的数据源配置后，就可以替换掉默认的 com.zaxxer.hikari.HikariDataSource
+      type: com.alibaba.druid.pool.DruidDataSource
+
+    ###################以下为druid增加的配置###########################
+      # 初始化连接池个数
+      initialSize: 5
+      # 最小连接池个数——》已经不再使用，配置了也没效果
+      minIdle: 2
+      # 最大连接池连接个数
+      maxActive: 20
+      # 配置获取连接等待超时的时间，单位毫秒，缺省启用公平锁，并发效率会有所下降
+      maxWait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      timeBetweenEvictionRunsMillis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      minEvictableIdleTimeMillis: 300000
+      # 用来检测连接是否有效的sql，要求是一个查询语句。
+      # 如果validationQuery为null，testOnBorrow、testOnReturn、testWhileIdle都不会起作用
+      validationQuery: SELECT 1 FROM DUAL
+      # 建议配置为true，不影响性能，并且保证安全性。
+      # 申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
+      testWhileIdle: true
+      # 申请连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能
+      testOnBorrow: false
+      # 归还连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能
+      testOnReturn: false
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      # 通过别名的方式配置扩展插件，多个英文逗号分隔，常用的插件有：
+      # 监控统计用的filter:stat
+      # 日志用的filter:log4j
+      # 防御sql注入的filter:wall
+      filters: stat,wall,log4j
+      # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+      # 合并多个DruidDataSource的监控数据
+      useGlobalDataSourceStat: true
