添加并测试Spring的缓存

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>spring-boot-web</module>
         <module>spring-boot-dubbo(provider)</module>
         <module>spring-boot-dubbo(consumer)</module>
+        <module>spring-boot-cache</module>
     </modules>
 
     <properties>
