--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>spring-boot-dubbo(provider)</module>
         <module>spring-boot-dubbo(consumer)</module>
         <module>spring-boot-cache</module>
+        <module><![CDATA[spring-boot-async&mail]]></module>
     </modules>
 
     <properties>
