未完成的事务和定时任务模块

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>spring-boot-dubbo(consumer)</module>
         <module>spring-boot-cache</module>
         <module><![CDATA[spring-boot-async&mail]]></module>
+        <module>spring-boot-tx</module>
+        <module>spring-boot-scheduler</module>
     </modules>
 
     <properties>
