--- a/spring-boot-redis/pom.xml
+++ b/spring-boot-redis/pom.xml
@@ -17,6 +17,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
+        <!-- Redis的连接池需要额外引入这个包-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.git</groupId>
             <artifactId>common</artifactId>
