--- a/spring-boot-redis/src/main/resources/application.yml
+++ b/spring-boot-redis/src/main/resources/application.yml
@@ -1,5 +1,16 @@
 spring:
   redis:
-    host: 192.168.42.141
-    port: 6389
+    host: 192.168.10.225
+    port: 6379
     password: 123456
+    # 配置lettuce
+    lettuce:
+      pool:
+        # 连接池中的最小空闲连接
+        min-idle: 1
+          # 连接池中的最大空闲连接
+        max-idle: 6
+          # 连接池最大连接数（使用负值表示没有限制,不要配置过大，否则可能会影响redis的性能）
+        max-active: 10
+          # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: 1000ms
