--- a/spring-boot-cache/src/main/resources/application.yml
+++ b/spring-boot-cache/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     username: root
-    password: 123456
+    password:
     url: jdbc:mysql://localhost:3306/hello-boot?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     hikari:
         idle-timeout: 50000
