spring异步任务线程池研究

--- a/spring-boot-async&mail/src/main/resources/application.yml
+++ b/spring-boot-async&mail/src/main/resources/application.yml
@@ -6,3 +6,10 @@ spring:
     host: smtp.126.com
     username: jicky2008chen@126.com
 #    properties: mail.smtp.ssl.enable=true
+
+  datasource:
+    username: root
+    password: 123456
+    url: jdbc:mysql://localhost:3306/hello-boot?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+
+
