--- a/spring-boot-redis/src/main/resources/application.yml
+++ b/spring-boot-redis/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   redis:
     host: 192.168.10.225
-    port: 6379
-    password: 123456
+    port: 6382
+#    password: 123456
     # 配置lettuce
     lettuce:
       pool:
@@ -14,3 +14,11 @@ spring:
         max-active: 10
           # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-wait: 1000ms
+    # redis只读库配置
+      redis-read-configs:
+        - host: 192.168.56.104
+          port: 6379
+          password: 123456
+        - host: 192.168.56.105
+          port: 6379
+          password: 123456
