--- a/spring-boot-tx/src/main/resources/application.yml
+++ b/spring-boot-tx/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     username: root
-    password: 123456
-    url: jdbc:mysql://localhost:3306/chen?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-    initialization-mode: never
+    password:
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    initialization-mode: always
     schema:
       - "classpath:db/schema.sql"
     data:
@@ -15,6 +15,6 @@ spring:
 
 logging:
   level:
-    root: warn
+    root: info
     cnblogs.chenbenbuyi.service: info
     cnblogs.chenbenbuyi: warn
