--- a/spring-boot-web/pom.xml
+++ b/spring-boot-web/pom.xml
@@ -36,6 +36,14 @@
             <version>1.2.17</version>
         </dependency>
 
+
+        <!--引入自定义的启动器-->
+        <dependency>
+            <groupId>com.git</groupId>
+            <artifactId>diy-spring-boot-stater</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
