--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>spring-boot-scheduler</module>
         <module>spring-boot-listener</module>
         <module>spring-boot-rabbitmq</module>
+        <module>spring-boot-xiaoyuan</module>
     </modules>
 
     <properties>
