--- a/spring-boot-mybatis-plus/src/main/resources/application.yml
+++ b/spring-boot-mybatis-plus/src/main/resources/application.yml
@@ -24,6 +24,31 @@ spring:
     data:
        - "classpath:db/data.sql"
 
+  # flyway 配置
+    flyway:
+      # 是否启用flyway
+      enabled: true
+      # 编码格式，默认UTF-8
+      encoding: UTF-8
+      # 迁移sql脚本文件存放路径，默认db/migration
+      locations: classpath:db/migration
+      # 迁移sql脚本文件名称的前缀，默认V
+      sql-migration-prefix: V
+      # 迁移sql脚本文件名称的分隔符，默认2个下划线__
+      sql-migration-separator: __
+      # 迁移sql脚本文件名称的后缀
+      sql-migration-suffixes: .sql
+      # 到新的环境中数据库中有数据，且没有flyway_schema_history表时，是否执行迁移操作,如果设置为false，在启动时会报错，并停止迁移;如果为true,则生成history表并完成所有的迁移，要根据实际情况设置;
+      baseline-on-migrate: false
+      #  执行执行时标记的tag 默认为<<Flyway Baseline>>
+      baseline-description: <<Flyway Baseline>>
+      #  检测迁移脚本的路径是否存在，如不存在，则抛出异常
+      check-location: true
+      #  在迁移时，是否校验脚本，假设V1.0__初始.sql已经迁移过了，在下次启动时会校验该脚本是否有变更过，则抛出异常
+      validate-on-migrate: true
+
+  # 特别说明:如果非空数据库迁移，在目标数据库中手动建flyway_schema_history表并手动写入初始化的脚本记录,使flyway跳过最初的校验即可，后续可以保证版本的统一;
+
 mybatis-plus:
   global-config:
     db-config:
