--- a/spring-boot-xiaoyuan/pom.xml
+++ b/spring-boot-xiaoyuan/pom.xml
@@ -21,8 +21,10 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
 
