Spring Boot 添加工作流相关配套类，项目启动成功

--- a/spring-boot-activiti/src/main/resources/application.yml
+++ b/spring-boot-activiti/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   activiti:
     async-executor-activate: true
-    # activiti 对数据库中的表进行更新，如果不存在，则创建
+    # activiti 对数据库中的表进行更新，如果不存在，则创建(线上一般用false)
     database-schema-update: true
     db-history-used: true
     history-level: full
