--- a/spring-boot-activiti/src/main/resources/application.yml
+++ b/spring-boot-activiti/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
       password: 123456
       url: jdbc:mysql://localhost:3306/activiti?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 
+
+logging:
+  level:
+    root: info
