--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>spring-boot-listener</module>
         <module>spring-boot-rabbitmq</module>
         <module>spring-boot-xiaoyuan</module>
+        <module>spring-boot-auth</module>
         <module>spring-boot-activiti</module>
     </modules>
 
