--- a/spring-boot-activiti/pom.xml
+++ b/spring-boot-activiti/pom.xml
@@ -17,9 +17,15 @@
             <artifactId>activiti-spring-boot-starter</artifactId>
             <version>7.1.0.M6</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.25</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
