--- a/spring-boot-activiti/src/main/resources/application.yml
+++ b/spring-boot-activiti/src/main/resources/application.yml
@@ -1,18 +1,31 @@
 spring:
   activiti:
-    async-executor-activate: true
-    # activiti 对数据库中的表进行更新，如果不存在，则创建(线上一般用false)
-    database-schema-update: true
-    db-history-used: true
     history-level: full
-    check-process-definitions: true
+    # 检测历史信息表是否存在，activiti7默认不生成历史信息表，开启历史表
+    db-history-used: true
+    #   1.flase：默认值。activiti在启动时，对比数据库表中保存的版本，如果没有表或者版本不匹配，将抛出异常
+    #   2.true： activiti会对数据库中所有表进行更新操作。如果表不存在，则自动创建
+    #   3.create_drop： 在activiti启动时创建表，在关闭时删除表（必须手动关闭引擎，才能删除表）
+    #   4.drop-create： 在activiti启动时删除原来的旧表，然后在创建新表（不需要手动关闭引擎）
+    database-schema-update: true
+    #    process-definition-location-prefix: classpath:processes/
+    check-process-definitions: false
+    use-strong-uuids: false
+    # 解决每次部署都会自动部署  SpringAutoDeployment 的问题
+    deployment-mode: never-fail
+
+
+
 
   datasource:
-      username: root
-      password: 123456
-      url: jdbc:mysql://localhost:3306/activiti?useUnicode=true&useSSL=false&characterEncoding=utf8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-
+    username: postgres
+    password: 123456
+    url: jdbc:postgresql://192.168.50.12:15432/at_2?stringtype=unspecified&TimeZone=Asia/Shanghai
 
 logging:
   level:
     root: info
+
+
+server:
+  port: 8080
