--- a/spring-boot-rabbitmq/pom.xml
+++ b/spring-boot-rabbitmq/pom.xml
@@ -25,4 +25,16 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>Nexus Release Repository</name>
+            <url>http://192.168.30.112:8082/artifactory/chen-local/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://192.168.30.112:8082/artifactory/chen-local/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
