--- a/spring-boot-redis/pom.xml
+++ b/spring-boot-redis/pom.xml
@@ -18,6 +18,20 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.17.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
+            <version>2.57</version>
+        </dependency>
+
+
+
         <!-- Redis的连接池需要额外引入这个包-->
         <dependency>
             <groupId>org.apache.commons</groupId>
